# skillz

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  FUTURE_PLANS.md  LICENSE  README.md  SECURITY.md  install.sh  skillz.toml  test_e2e.py  test_features.py
.github/hooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  paper.yml  publish.yml  release.yml
docs/: ARCHITECTURE.md  LLM_GUIDE.md  blog.html  index.html  install-cursor.html
publication/research/: _quarto.yml  index.qmd  references.bib
src/: builder.rs  client.rs  config.rs  importer.rs  lib.rs  main.rs  memory.rs  pipeline.rs  prompts.rs  registry.rs  runtime.rs  services.rs  templates.rs  watcher.rs
tests/: builder_test.rs  importer_test.rs  integration_test.rs  property_tests.rs  registry_test.rs  runtime_test.rs
tests/common/: mod.rs
