[package]
name = "skillz"
version = "0.1.2"
edition = "2021"
authors = ["Algimantas Krasauskas"]
description = "Self-extending MCP server - build and execute custom AI tools at runtime"
license = "MIT"
repository = "https://github.com/Algiras/skillz"
homepage = "https://algiras.github.io/skillz"
documentation = "https://github.com/Algiras/skillz#readme"
readme = "README.md"
keywords = ["mcp", "ai", "wasm", "tools", "llm"]
categories = ["development-tools", "wasm", "command-line-utilities"]
rust-version = "1.70"

[[bin]]
name = "skillz"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "26.0.0"
wasmtime-wasi = "26.0.0"
anyhow = "1.0"
tempfile = "3.8"
rmcp = { version = "0.9.1", features = ["transport-io", "elicitation"] }
rmcp-macros = "0.9.1"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
